$Id$

2016-03-31  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: 
	 - add samsung SAMSUNG-MZ7PC series (ticket #679)
	 - add KINGSTON SKC400S37128G (SSDNow KC400) (ticket #673, patch provided
	   by the reporter)
	 - add SanDisk SSD Plus series (ticket #674)
	 - add XceedIOPS SSD series (ticket #672)

2016-03-30  Christian Franke  <franke@computer.org>

	Add support for multiple '-d TYPE' options for device scanning:
	dev_interface.cpp, dev_interface.cpp: Add new version of
	scan_smart_devices() which accepts list of types.
	smartctl.cpp, smartd.cpp: Allow multiple '-d TYPE' options.
	Use new scan_smart_devices().
	smartctl.8.in, smartd.conf.5.in: Document it.

	Makefile.am: Add man page support for --with-nvme-devicescan.
	smartd.8.in: Document NVMe DEVICESCAN for Linux.

	configure.ac: Use `...` instead of $(...) due to possible parsing
	problems since r4260.  Remove workaround for related bash bug.

2016-03-28  Christian Franke  <franke@computer.org>

	Add NVMe DEVICESCAN support for Linux:
	configure.ac: Add --with-nvme-devicescan option.
	os_linux.cpp: Scan for '/dev/nvme[0-99]' if '-d nvme' is specified
	or --with-nvme-devicescan is set.
	smartctl.cpp: Add "NVMe" to --scan info.

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Enable NVMe
	sections also for FreeBSD.

	configure.ac: Write configuration summary also to config.log.

2016-03-28  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: Add initial FreeBSD NVMe support (ticket #657)

2016-03-27  Christian Franke  <franke@computer.org>

	ataprint.cpp: Support POWER MODE values introduced in ATA ACS-2
	(ticket #184, smartctl only).

2016-03-27  Thomas Gatterweh  <thomas_gatterweh@hotmail.com>

	atacmds.cpp, smartd.cpp: Support POWER MODE values introduced
	in ATA ACS-2 (ticket #184, smartd only).

2016-03-26  Christian Franke  <franke@computer.org>

	os_win32.cpp: Rearrange code such that no forward declarations
	are needed.

	os_freebsd.cpp, os_netbsd.cpp, os_openbsd.cpp, os_solaris.cpp,